WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215988
REGRESSION (
r266262
): Scroll latching fails when scrolling into a preventDefault() region
https://bugs.webkit.org/show_bug.cgi?id=215988
Summary
REGRESSION (r266262): Scroll latching fails when scrolling into a preventDefa...
Simon Fraser (smfr)
Reported
2020-08-30 11:10:09 PDT
Created
attachment 407570
[details]
Testcase In the attached testcase, put your pointer where indicated and momentum scroll down. Scrolling stops as soon as the pointer is over the wheel event handler region, but it should not.
Attachments
Testcase
(1010 bytes, text/html)
2020-08-30 11:10 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(6.46 KB, patch)
2020-08-30 13:48 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-08-30 11:10:35 PDT
<
rdar://problem/68034716
>
Simon Fraser (smfr)
Comment 2
2020-08-30 12:35:11 PDT
This happens because m_lastLatchedNodeInterationTime isn't updated, so we lose latching 100ms after the start of the gesture.
Simon Fraser (smfr)
Comment 3
2020-08-30 13:48:13 PDT
Created
attachment 407572
[details]
Patch
EWS
Comment 4
2020-08-30 15:09:26 PDT
Committed
r266336
: <
https://trac.webkit.org/changeset/266336
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407572
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug